5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1679_1101.log
== SUBMITION (2019-05-01 15:11:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
if(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
if(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
if(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
if(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
if(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.225533
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.800000000000004
Entradas: -56.0 kWh e tipo  I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.075
Entradas: 955.5 kWh e tipo  R
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:12:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.193668
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:12:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.226017
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:12:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:12:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.197046
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:12:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", total)
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:13:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.156162
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:13:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:14:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.146904
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:14:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.147724
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:14:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.143143
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:18:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.227646
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:18:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.121417
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:18:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.109419
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:18:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.170802
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:18:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.118274
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:18:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.356487
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:18:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.339239
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:18:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.220189
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:35:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.297844
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:35:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.264787
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:35:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.125455
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:35:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>5000 and t=="I"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")

	
-- EXECUTION TIME:
0.167737
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:56:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(t!="C" and t!="R" and t!="I"):
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")
elif(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))

	
-- EXECUTION TIME:
0.135164
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:10:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(t!="C" and t!="R" and t!="I"):
	print("Entradas:", c, "kWh e tipo ", t)
	print("Dados invalidos")
elif(c<=500 and t=="R"):
	total = 0.44 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>500 and t=="R"):
	total = 0.65 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=1000 and t=="C"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c>1000 and t=="C"):
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
elif(c<=5000 and t=="I"):
	total = 0.55 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))
else:
	total = 0.60 * c
	print("Entradas:", c, "kWh e tipo ", t)
	print("Valor total: R$", round(total,2))

	
-- EXECUTION TIME:
0.189052
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo  R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:22:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = c *0.44
	print("Entradas: ", c, "kWh e tipo" t)
	print("Valor total: R$", round(total, 2))
elif(c>500 and t=="R"):
	total = c *0.65
	print("Entradas: ", c, "kWh e tipo" t)
	print("Valor total: R$", round(total, 2))
else:
	print("Entradas: ", c, "kWh e tipo" t)
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 8
    print("Entradas: ", c, "kWh e tipo" t)
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:22:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = c *0.44
	print("Entradas: ", c, "kWh e tipo", t)
	print("Valor total: R$", round(total, 2))
elif(c>500 and t=="R"):
	total = c *0.65
	print("Entradas: ", c, "kWh e tipo", t)
	print("Valor total: R$", round(total, 2))
else:
	print("Entradas: ", c, "kWh e tipo" t)
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 15
    print("Entradas: ", c, "kWh e tipo" t)
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:22:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = c *0.44
	print("Entradas: ", c, "kWh e tipo", t)
	print("Valor total: R$", round(total, 2))
elif(c>500 and t=="R"):
	total = c *0.65
	print("Entradas: ", c, "kWh e tipo", t)
	print("Valor total: R$", round(total, 2))
else:
	print("Entradas: ", c, "kWh e tipo", t)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:24:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input())
t = input()
if(c<=500 and t=="R"):
	total = c *0.44
	print("Entradas: ", c, "kWh e tipo", t)
	print("Valor total: R$", round(total, 2))
elif(c>500 and t=="R"):
	total = c *0.65
	print("Entradas: ", c, "kWh e tipo", t)
	print("Valor total: R$", round(total, 2))
elif(c<=1000 and t=="C"):
	total = c *0.55
	print("Entradas: ", c, "kWh e tipo", t)
	print("Valor total: R$", round(total, 2))
elif(c>1000 and t=="C"):
	total = c *0.60
	print("Entradas: ", c, "kWh e tipo", t)
	print("Valor total: R$", round(total, 2))
elif(c<=5000 and t=="i"):
	total = c *0.55
	print("Entradas: ", c, "kWh e tipo", t)
	print("Valor total: R$", round(total, 2))
elif(c>5000 and t=="i"):
	total = c *0.60
	print("Entradas: ", c, "kWh e tipo", t)
	print("Valor total: R$", round(total, 2))
else:
	print("Entradas: ", c, "kWh e tipo", t)
	print("Dados invalidos")
-- EXECUTION TIME:
0.129373
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
